[gd_scene load_steps=9 format=3 uid="uid://ck8uvwlwnv14h"]

[ext_resource type="PackedScene" uid="uid://dd47odg8af7i3" path="res://scenes/base/connector/out.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bhsk0p4obuir6" path="res://scenes/base/element/element.tscn" id="3"]
[ext_resource type="Shader" path="res://scenes/base/element/element_shader.gdshader" id="3_x12bh"]
[ext_resource type="Texture2D" uid="uid://cr8kjefxskk42" path="res://scenes/base/element/dissolve_texture.tres" id="4_ltgog"]
[ext_resource type="PackedScene" uid="uid://i3np3a2r6kve" path="res://scenes/base/connector/in.tscn" id="6"]
[ext_resource type="Script" path="res://scenes/elements/adder_8_bit/adder_8_bit.gd" id="7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m46s6"]
resource_local_to_scene = true
shader = ExtResource("3_x12bh")
shader_parameter/texture_alpha = 1.0
shader_parameter/outline_width = 1.0
shader_parameter/outline_color = null
shader_parameter/is_outlined = false
shader_parameter/is_dissolve = false
shader_parameter/texture_size = Vector2(137, 137)
shader_parameter/stripe_color = null
shader_parameter/stripe_width = 4.0
shader_parameter/stripe_bias = 2.0
shader_parameter/is_striped = false
shader_parameter/is_created = false
shader_parameter/dissolveNoise = ExtResource("4_ltgog")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0tgvb"]
load_path = "res://.godot/imported/adder_8_bit_off.png-93f47762d126cd5bd6f5b1533e739463.ctex"

[node name="Adder8Bit" instance=ExtResource("3")]
script = ExtResource("7")
type = 18

[node name="CollisionPolygon2D" parent="FirstArea" index="0"]
polygon = PackedVector2Array(312, -147, 335, -136, 335, -125, 351, -116, 351, -108, 212, -38, 224, -32, 224, -27, 214, -22, 220, -19, 220, -14, -84, 139, -96, 133, -112, 141, -128, 133, -272, 205, -304, 189, -328, 201, -384, 173, -384, 164, -372, 158, -374, 149, 251, -163, 272, -151, 276, -153, 300, -142)

[node name="FirstSprite2D" parent="." index="1"]
material = SubResource("ShaderMaterial_m46s6")
texture = SubResource("CompressedTexture2D_0tgvb")

[node name="SafeArea" parent="." index="2"]
visible = false

[node name="CollisionPolygon2D" parent="SafeArea" index="0"]
polygon = PackedVector2Array(269, -179, 427, -94, -261, 254, -431, 171)

[node name="Out" parent="Connectors" index="0" instance=ExtResource("2")]
position = Vector2(207, -11)

[node name="Out2" parent="Connectors" index="1" instance=ExtResource("2")]
position = Vector2(167, 9)

[node name="Out3" parent="Connectors" index="2" instance=ExtResource("2")]
position = Vector2(127, 29)

[node name="Out4" parent="Connectors" index="3" instance=ExtResource("2")]
position = Vector2(87, 49)

[node name="Out5" parent="Connectors" index="4" instance=ExtResource("2")]
position = Vector2(47, 69)

[node name="Out6" parent="Connectors" index="5" instance=ExtResource("2")]
position = Vector2(7, 89)

[node name="Out7" parent="Connectors" index="6" instance=ExtResource("2")]
position = Vector2(-33, 109)

[node name="Out8" parent="Connectors" index="7" instance=ExtResource("2")]
position = Vector2(-73, 129)

[node name="OutC" parent="Connectors" index="8" instance=ExtResource("2")]
position = Vector2(-339, 191)

[node name="In" parent="Connectors" index="9" instance=ExtResource("6")]
position = Vector2(241, -156)

[node name="InC" parent="Connectors" index="10" instance=ExtResource("6")]
position = Vector2(322, -142)

[node name="In2" parent="Connectors" index="11" instance=ExtResource("6")]
position = Vector2(201, -136)

[node name="In3" parent="Connectors" index="12" instance=ExtResource("6")]
position = Vector2(161, -116)

[node name="In4" parent="Connectors" index="13" instance=ExtResource("6")]
position = Vector2(121, -96)

[node name="In5" parent="Connectors" index="14" instance=ExtResource("6")]
position = Vector2(81, -76)

[node name="In6" parent="Connectors" index="15" instance=ExtResource("6")]
position = Vector2(41, -56)

[node name="In7" parent="Connectors" index="16" instance=ExtResource("6")]
position = Vector2(1, -36)

[node name="In8" parent="Connectors" index="17" instance=ExtResource("6")]
position = Vector2(-39, -16)

[node name="In9" parent="Connectors" index="18" instance=ExtResource("6")]
position = Vector2(-79, 4)

[node name="In10" parent="Connectors" index="19" instance=ExtResource("6")]
position = Vector2(-119, 24)

[node name="In11" parent="Connectors" index="20" instance=ExtResource("6")]
position = Vector2(-159, 44)

[node name="In12" parent="Connectors" index="21" instance=ExtResource("6")]
position = Vector2(-199, 64)

[node name="In13" parent="Connectors" index="22" instance=ExtResource("6")]
position = Vector2(-239, 84)

[node name="In14" parent="Connectors" index="23" instance=ExtResource("6")]
position = Vector2(-279, 104)

[node name="In15" parent="Connectors" index="24" instance=ExtResource("6")]
position = Vector2(-319, 124)

[node name="In16" parent="Connectors" index="25" instance=ExtResource("6")]
position = Vector2(-359, 144)
